fix: Use bigger gap based on previous implementation

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -171,7 +171,7 @@
 		default: (
 			blocks: (
 				right-rail: (
-					gap: var(--global-spacing-5),
+					gap: var(--global-spacing-6),
 				),
 				right-rail-header: (
 					position: sticky,
@@ -180,7 +180,7 @@
 					z-index: 9,
 				),
 				right-rail-main: (
-					gap: var(--global-spacing-5),
+					gap: var(--global-spacing-6),
 					flex-grow: 1,
 					transition: padding-top 0.3s linear,
 					// remove width 100% to use margin
@@ -188,7 +188,7 @@
 					margin: 0 5% 0 5%,
 				),
 				right-rail-extra-main-item: (
-					margin: 0 0 var(--global-spacing-5) 0,
+					margin: 0 0 var(--global-spacing-6) 0,
 				),
 			),
 		),
